# hx32-download-manager

./: .gitignore  Cargo.toml  README.md  debian.control  hx32-download-manager_1.0.0~alpha_amd64.deb  hx32-download-manager_2.0.0~alpha_amd64.deb  hx32_download_manager.py  uninstall_hx32_download_manager.sh
.github/workflows/: build-release-windows.yml
assets/: style.css
debian/DEBIAN/: control  postrm
debian/usr/share/applications/: hx32-download-manager.desktop
debian/usr/share/hx32-download-manager/: README.md  style.css
src/: main.rs
