[package]
name = "hx32_download_manager"
version = "0.1.0"
edition = "2021"
authors = ["HX32 Team"]
description = "Gestionnaire de téléchargements moderne GTK4 pour Linux"
license = "MIT"
repository = "https://github.com/example/hx32-download-manager"

[dependencies]
gtk4 = { version = "0.11", package = "gtk4" }
glib = "0.21"

[features]
default = []
