[package]
name = "hx32_download_manager"
version = "0.1.0"
edition = "2021"
authors = ["HX32 Team"]
description = "Modern GTK4 download manager for Linux"
# Last updated: 2026-06-30 — v5.0.0
license = "MIT"
repository = "https://github.com/FixzX/hx32-download-manager"

[dependencies]
gtk4 = { version = "0.11", package = "gtk4" }
glib = "0.21"

[features]
default = []
